# luxlab

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  index.html  package-lock.json  package.json  vercel.json  vite.config.js
.agent/: prompt.txt
.github/workflows/: ci.yml
luxlab-engine/: Cargo.toml
luxlab-engine/src/: error.rs  lib.rs
luxlab-engine/src/em/: fdtd.rs  mod.rs
luxlab-engine/src/geo/: mod.rs  optics.rs  raytracer.rs
luxlab-engine/src/nuclear/: attenuation.rs  compton.rs  decay.rs  dosimetry.rs  mod.rs
luxlab-engine/src/quantum/: bell.rs  mod.rs  photoelectric.rs  schrodinger.rs
luxlab-engine/src/spectro/: atomic.rs  fraunhofer.rs  identification.rs  mod.rs
luxlab-engine/src/utils/: constants.rs  mod.rs  wavelength.rs
luxlab-engine/src/wave/: coherence.rs  diffraction.rs  interference.rs  mod.rs  polarization.rs
public/: manifest.json  sw.js
src/: App.jsx  index.css  main.jsx
src/collaboration/: collabSession.js  useCollab.js  useCollaboration.js  yjsProvider.js
src/core/: SimulationBridge.js  colorScience.js  persistence.js  useFileActions.js  useSimulation.js
src/core/formats/: exportPDF.js  lux.js
src/core/loader/: pluginLoader.js
src/core/plugin-api/: LuxPlugin.js  PluginRegistry.js  index.js  types.js  (+1 more)
src/store/: useAppStore.js  useSimStore.js
src/ui/: Layout.tsx  SplashScreen.jsx
src/wasm/: luxlab_engine.d.ts  luxlab_engine.js  luxlab_engine_bg.wasm  luxlab_engine_bg.wasm.d.ts  package.json
src/workers/: simulation.worker.js
wasm/: luxlab_engine.d.ts  luxlab_engine.js  luxlab_engine_bg.wasm
(+28 files in other folders)
